...
		super.viewDidLoad()
		title = "IT Books Search"
		navigationItem.backButtonDisplayMode = .minimal
		navigationController?.navigationBar.prefersLargeTitles = true
		navigationItem.largeTitleDisplayMode = .automatic
		
		tableView.accessibilityIdentifier = "SearchTableView"
		viewError.accessibilityIdentifier = "SearchViewError"
		
		requestData()
	}
	
	func requestData() {
		Task {
...
