...
	@IBOutlet weak var stackViewPdf: UIStackView!
	
	override func viewDidLoad() {
		super.viewDidLoad()
		navigationItem.largeTitleDisplayMode = .never
		
		labelTitle.accessibilityIdentifier = "DetailLabelTitle"
		
		Task {
			await MainActor.run {
				loadingIndicator.startAnimating()
			}
			
...
